* Fixed bug in theme_custom(...)
* Fixed bug in how the order of axis label preferences ie, Tarrow << yarrow << T << y << default etc...
* Created geom_ternary_crosshar new geometry
* Added some custom legend keys for new geometries
* Fixed bug with the hshift and vshift theme elements, reduced them to numeric candidates

ggtern 2.0.1
----------------------------------------------------------------
* Fixed minor bugs in interpolation and countouring stats
* Fixed missing imports

ggtern 2.0.0
----------------------------------------------------------------
* Almost entirely re-written package, providing compatability with ggplot2 (>= 2.0.0)
* Improved axes contruction routine, cleaner & better arrangement of the ternary scales & plot area
* Implements the use of a manual clipping mask, rather than exclusion of points outside of the plot area
* Inclusion of several new gemetries
* Compatable with a larger number of base geometries from ggplot2
* Now uses a custom rendering mask, which is added by default in the foreground, however, can be placed manually as a layer via geom_mask(...)
* Standardised the naming / heirachy of the theme elements
* Added geom_Xisoprop new geometry, for plotting isoproportion lines
* Implementation of appropriate orthogonal coordinate systems for many of the geometries such as geom_density_ternand geom_interpolation_tern
* Greater control over the labelling, including expressions and TeX parsing.
* The function grid.arrange now works perfectly
* Plots can be rotated using theme_rotate(angle) method

ggtern 1.0.6.1
----------------------------------------------------------------
* Replaced the padding argument of the coord_tern constructor, with an insertion of rows and columns around the main panel in the rendering routine, with an associated theme element 'panel.margin.tern', which is distinct from and not to be confused with 'plot.margin' or 'panel.margin'