@@ -27,11 +27,14 @@ export(GeomErrorbart)
 export(GeomInterpolateTern)
 export(GeomLisoprop)
 export(GeomLline)
+export(GeomLmark)
 export(GeomRisoprop)
 export(GeomRline)
+export(GeomRmark)
 export(GeomSmoothTern)
 export(GeomTisoprop)
 export(GeomTline)
+export(GeomTmark)
 export(Larrowlab)
 export(Llab)
 export(Lline)
@@ -56,18 +59,24 @@ export(coord_tern)
 export(custom_percent)
 export(draw_key_Liso)
 export(draw_key_Lline)
+export(draw_key_Lmark)
 export(draw_key_Riso)
 export(draw_key_Rline)
+export(draw_key_Rmark)
 export(draw_key_Tiso)
 export(draw_key_Tline)
+export(draw_key_Tmark)
 export(draw_key_crosshair_tern)
 export(element_ternary)
 export(geom_Lisoprop)
 export(geom_Lline)
+export(geom_Lmark)
 export(geom_Risoprop)
 export(geom_Rline)
+export(geom_Rmark)
 export(geom_Tisoprop)
 export(geom_Tline)
+export(geom_Tmark)
 export(geom_confidence)
 export(geom_confidence_tern)
 export(geom_crosshair_tern)
